--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -30,6 +30,22 @@
         </div>
 
         <div class="card">
+            <h2 class="card-title">Type of model</h2>
+            <div class="form-check">
+                <input class="form-check-input" type="radio" name="modelType" id="modelType1" value="xray" checked>
+                <label class="form-check-label" for="modelType1">
+                  xray
+                </label>
+              </div>
+              <div class="form-check">
+                <input class="form-check-input" type="radio" name="modelType" id="modelType2" value="transferlearning">
+                <label class="form-check-label" for="modelType2">
+                  transferlearning
+                </label>
+              </div>
+        </div>
+
+        <div class="card">
             <h2 class="card-title">
                 Image preview
             </h2>
@@ -49,11 +65,11 @@
         let uploadFile = document.getElementById('upload_file');
         let img = document.getElementById('image');
         let resultLabel = document.getElementById('result');
-
         function processImage() {
+            let modelType = document.querySelector('input[name=modelType]:checked');
             let formData = new FormData();
             formData.append("file", uploadFile.files[0]);
-            fetch('/process_xray/', { method: 'POST', body: formData }).then(response => response.json()).then(body => resultLabel.textContent = body.predictions[0]);
+            fetch('/process_xray/' + modelType.value, { method: 'POST', body: formData }).then(response => response.json()).then(body => resultLabel.textContent = body);
             img.src = 'static/processed_image.jpg';
             img.style.width = '256px';
             img.style.height = '256px';
