--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -34,13 +34,13 @@
             <div class="form-check">
                 <input class="form-check-input" type="radio" name="modelType" id="modelType1" value="xray" checked>
                 <label class="form-check-label" for="modelType1">
-                  xray
+                  xray (without transfer learning)
                 </label>
               </div>
               <div class="form-check">
                 <input class="form-check-input" type="radio" name="modelType" id="modelType2" value="transferlearning">
                 <label class="form-check-label" for="modelType2">
-                  transferlearning
+                  transferlearning (based on Inception V3)
                 </label>
               </div>
         </div>
@@ -54,7 +54,7 @@
         
         <div class="card">
             <h2 class="card-title">
-                Probability of pneumonia: 
+                Probability of pneumonia [1 means sick of pneumonia]: 
             </h2>
             <img src="" id='image'>
             <h2 id='result'></h2>
